[gd_scene load_steps=13 format=3 uid="uid://b3168kgre3467"]

[ext_resource type="Theme" uid="uid://cvwjhquk2k1au" path="res://ressources/warlock_theme.tres" id="1_v01lb"]
[ext_resource type="Script" path="res://addons/ccg_tools/scripts/card.gd" id="2_dndha"]
[ext_resource type="Texture2D" uid="uid://f5jxxiajhdcr" path="res://addons/ccg_tools/assets/images/Alternate_1.png" id="3_jbjhf"]
[ext_resource type="Texture2D" uid="uid://dlobubl5o5ulg" path="res://assets/images/cards/card_template/back_circle.png" id="4_ik75j"]
[ext_resource type="Texture2D" uid="uid://btcddmhj7e4sg" path="res://addons/ccg_tools/assets/images/hero_2.png" id="5_3lle2"]
[ext_resource type="Texture2D" uid="uid://b7ps5mrluxmxw" path="res://assets/images/cards/card_template/front_circle.png" id="6_f2u6q"]
[ext_resource type="Texture2D" uid="uid://csv0o7tgu8wxx" path="res://assets/images/cards/card_template/decoration.png" id="7_ji46b"]
[ext_resource type="Texture2D" uid="uid://u8wqprko3gg0" path="res://addons/ccg_tools/assets/images/emblem_2.png" id="8_bc6pn"]
[ext_resource type="Texture2D" uid="uid://c5h1onmye487f" path="res://assets/images/cards/card_template/attack.png" id="10_wsymt"]
[ext_resource type="FontFile" uid="uid://s4jditl3moh2" path="res://assets/fonts/BalooChettan2-Bold.ttf" id="11_4ahwq"]
[ext_resource type="Texture2D" uid="uid://buevtshnep34t" path="res://assets/images/cards/card_template/health.png" id="12_ta40q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w03s"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="Card" type="Control"]
custom_minimum_size = Vector2(240, 332.8)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = -340.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Hello"
theme = ExtResource("1_v01lb")
script = ExtResource("2_dndha")

[node name="FullMode" type="Control" parent="."]
custom_minimum_size = Vector2(300, 416)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 208)

[node name="BackNode" type="Control" parent="FullMode"]
anchors_preset = 0
offset_left = 29.0
offset_top = 53.0
offset_right = 271.0
offset_bottom = 388.0

[node name="Back" type="TextureRect" parent="FullMode/BackNode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(121, 167)
texture = ExtResource("3_jbjhf")
expand_mode = 1
stretch_mode = 5

[node name="Icon" type="Control" parent="FullMode"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 53.0
offset_top = 52.0
offset_right = 247.0
offset_bottom = 257.0

[node name="BackCircle" type="TextureRect" parent="FullMode/Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ik75j")
expand_mode = 1
stretch_mode = 5

[node name="Profile" type="TextureRect" parent="FullMode/Icon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3lle2")
expand_mode = 1
stretch_mode = 5

[node name="FrontCircle" type="TextureRect" parent="FullMode/Icon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_f2u6q")
expand_mode = 1
stretch_mode = 5

[node name="DecorationNode" type="Control" parent="FullMode"]
anchors_preset = 0
offset_right = 300.0
offset_bottom = 416.0

[node name="Decoration" type="TextureRect" parent="FullMode/DecorationNode" groups=["Minion"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_ji46b")
expand_mode = 1
stretch_mode = 5

[node name="Description" type="Label" parent="FullMode"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 74.0
offset_top = 231.0
offset_right = 228.0
offset_bottom = 311.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="EmblemNode" type="Control" parent="FullMode"]
modulate = Color(1, 1, 1, 0.4)
anchors_preset = 0
offset_left = 119.0
offset_top = 245.0
offset_right = 179.0
offset_bottom = 329.0

[node name="Emblem" type="TextureRect" parent="FullMode/EmblemNode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_bc6pn")
expand_mode = 1
stretch_mode = 5

[node name="Type" type="Label" parent="FullMode"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 95.0
offset_top = 375.0
offset_right = 206.0
offset_bottom = 403.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="FullMode"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 56.0
offset_top = 44.0
offset_right = 236.0
offset_bottom = 77.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mana" type="Label" parent="FullMode" groups=["Minion", "Spell"]]
unique_name_in_owner = true
layout_mode = 0
offset_left = 127.0
offset_top = -8.0
offset_right = 167.0
offset_bottom = 62.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attack" type="Label" parent="FullMode" groups=["Minion"]]
unique_name_in_owner = true
layout_mode = 0
offset_left = 35.0
offset_top = 327.0
offset_right = 75.0
offset_bottom = 397.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="Label" parent="FullMode" groups=["Minion"]]
unique_name_in_owner = true
layout_mode = 0
offset_left = 225.0
offset_top = 324.0
offset_right = 265.0
offset_bottom = 401.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddOrRemove" type="HBoxContainer" parent="FullMode"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 28.0
offset_top = 3.0
offset_right = -23.0
offset_bottom = 36.0
grow_horizontal = 2

[node name="Remove" type="Button" parent="FullMode/AddOrRemove"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
disabled = true
text = "- Remove"

[node name="CountLabel" type="Label" parent="FullMode/AddOrRemove"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2w03s")
text = "Count : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Add" type="Button" parent="FullMode/AddOrRemove"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "+ Add"

[node name="SelectBox" type="CheckBox" parent="FullMode"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 103.0
offset_top = 338.0
offset_right = 197.0
offset_bottom = 376.0
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
disabled = true
text = "Select"

[node name="FieldMode" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(109, 115)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProfileField" type="TextureRect" parent="FieldMode"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3lle2")
expand_mode = 1
stretch_mode = 5

[node name="AttackBackField" type="TextureRect" parent="FieldMode"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 36.4)
layout_mode = 0
offset_left = 9.52
offset_top = 76.72
offset_right = 44.52
offset_bottom = 113.12
texture = ExtResource("10_wsymt")
expand_mode = 1
stretch_mode = 5

[node name="AttackField" type="Label" parent="FieldMode/AttackBackField" groups=["Minion"]]
unique_name_in_owner = true
layout_mode = 2
offset_left = 8.0
offset_top = -1.0
offset_right = 25.0
offset_bottom = 37.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_4ahwq")
theme_override_font_sizes/font_size = 23
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Healthback" type="TextureRect" parent="FieldMode"]
layout_mode = 0
offset_left = 72.24
offset_top = 76.72
offset_right = 107.24
offset_bottom = 113.12
texture = ExtResource("12_ta40q")
expand_mode = 1
stretch_mode = 5

[node name="HealthField" type="Label" parent="FieldMode/Healthback" groups=["Minion"]]
unique_name_in_owner = true
layout_mode = 2
offset_left = 9.0
offset_top = 1.0
offset_right = 26.0
offset_bottom = 39.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_4ahwq")
theme_override_font_sizes/font_size = 23
text = "2"
horizontal_alignment = 1

[connection signal="pressed" from="FullMode/AddOrRemove/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="FullMode/AddOrRemove/Add" to="." method="_on_add_pressed"]
[connection signal="toggled" from="FullMode/SelectBox" to="." method="_on_select_box_toggled"]
